--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "sass-loader": "^10.0.0",
     "vue-cli-plugin-vuetify": "~2.5.0",
     "vue-template-compiler": "^2.6.14",
-    "vuetify-loader": "^1.7.0"
+    "vuetify-loader": "^1.7.0",
+    "vue-router": "^3.5.3"
   },
   "eslintConfig": {
     "root": true,
